新增 ico、修改圖片

--- a/explain.html
+++ b/explain.html
@@ -5,6 +5,7 @@
     <link href='css/rotating-card.css' rel='stylesheet'/>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <title>黑客社闖關遊戲題目解析</title>
+    <link rel="icon" href="./images/hr.ico" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, user-scalable=no">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/alertify.min.css"/>
