--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>黑客社闖關遊戲</title>
+    <link rel="icon" href="./images/hr.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/game.css">
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, user-scalable=no">
