--- a/explain.html
+++ b/explain.html
@@ -22,7 +22,7 @@
                         <img class="card" src="images/1C.png"/>
                     </div>
                     <div class="back">
-                        <img class="card" src="images/1HR.png" onclick="alertify.alert('使用python的優點', '<div>優點一：語法簡單，例如在螢幕上印出「Hello! World!」，只要寫上 print(“Hello! World”)，不用 main 函式。</br>優點二：工法完整，C 語言只支援「程序導向」；Java 支援「程序導向」與「物件導向」，直到 Java 8 之後，才補上支援「函數導向」的語法；而 Python 很早就支援「程序導向」、「物件導向」、「函數導向」三種工法，所以學會 Python 後，學習任何其它語言都會快！</br>優點三：應用廣泛，他有豐富的「函式庫（Library）」，所以 Python 能做到「萬用語言」。</br>缺點：執行緩慢，Python 雖然適用於各行各業，但它有個致命傷：慢！</div>');"/>
+                        <img class="card" src="images/1HR.png" onclick="alertify.alert('使用Python的優點', '<div>優點一：語法簡單，例如在螢幕上印出「Hello! World!」，只要寫上 print(“Hello! World”)，不用 main 函式。</br>優點二：工法完整，C 語言只支援「程序導向」；Java 支援「程序導向」與「物件導向」，直到 Java 8 之後，才補上支援「函數導向」的語法；而 Python 很早就支援「程序導向」、「物件導向」、「函數導向」三種工法，所以學會 Python 後，學習任何其它語言都會快！</br>優點三：應用廣泛，他有豐富的「函式庫（Library）」，所以 Python 能做到「萬用語言」。</br>缺點：執行緩慢，Python 雖然適用於各行各業，但它有個致命傷：慢！</div>');"/>
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                         <img class="card" src="images/3C.png"/>
                     </div>
                     <div class="back">
-                        <img class="card" src="images/3HR.png" onclick="alertify.alert('常見的網頁代碼', '<div>當客戶端使用 HTTP 瀏覽網頁時，伺服器需要針對不同的「要求」提供不同的「回應」，數字開頭代表特定種類的問題，而開頭後兩位代表那個種類裡面的各種訊息，數字開頭為 1 代表臨時的回應，例如 101 表示切換通訊協定，數字開頭為 2 代表伺服器成功接受用戶要求，例如：200 是成功、201 表示已建立，數字開頭為 4 代表用戶端錯誤，例如：錯誤代碼 401 表示禁止存取、404 表示找不到；後兩位數字碼則代表著特定的錯誤訊息；HTTP 的三字元代碼跟早期通訊協定 FTP 和 NNTP 的代碼十分類似。</div>');"/>
+                        <img class="card" src="images/3HR.png" onclick="alertify.alert('常見的網頁錯誤代碼', '<div>當客戶端使用 HTTP 瀏覽網頁時，伺服器需要針對不同的「要求」提供不同的「回應」，數字開頭代表特定種類的問題，而開頭後兩位代表那個種類裡面的各種訊息，數字開頭為 1 代表臨時的回應，例如 101 表示切換通訊協定，數字開頭為 2 代表伺服器成功接受用戶要求，例如：200 是成功、201 表示已建立，數字開頭為 4 代表用戶端錯誤，例如：錯誤代碼 401 表示禁止存取、404 表示找不到；後兩位數字碼則代表著特定的錯誤訊息；HTTP 的三字元代碼跟早期通訊協定 FTP 和 NNTP 的代碼十分類似。</div>');"/>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                         <img class="card" src="images/7C.png"/>
                     </div>
                     <div class="back">
-                        <img class="card" src="images/7HR.png" onclick="alertify.alert('程式語言的列表', '<div>C、C++、JAVASCRIPT、PYTHON、PHP、RUBY、JAVA、C#</br>程式語言是用來定義電腦程式的形式語言。它是一種被標準化的交流技巧，用來向電腦發出指令。一般分為低階語言和高階語言，但這並非指低階語言較高階語言差，是因為該類語言在運作時無法進行進一步的抽象化，而與中央處理器的機器語言或指令直接對應，因此一般被叫做是原始的程式語言，常見的有機器語言、組合語言，高階語言為問題導向語言，是專為各種應用程式而設計的語言，其語法已經接近人類日常生活用語，簡單易懂，常見的有 c、java、python…。</div>');"/>
+                        <img class="card" src="images/7HR.png" onclick="alertify.alert('程式語言有哪些', '<div>C、C++、JAVASCRIPT、PYTHON、PHP、RUBY、JAVA、C#</br>程式語言是用來定義電腦程式的形式語言。它是一種被標準化的交流技巧，用來向電腦發出指令。一般分為低階語言和高階語言，但這並非指低階語言較高階語言差，是因為該類語言在運作時無法進行進一步的抽象化，而與中央處理器的機器語言或指令直接對應，因此一般被叫做是原始的程式語言，常見的有機器語言、組合語言，高階語言為問題導向語言，是專為各種應用程式而設計的語言，其語法已經接近人類日常生活用語，簡單易懂，常見的有 c、java、python…。</div>');"/>
                     </div>
                 </div>
             </div>
