--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>黑客社闖關遊戲</title>
+    <title>SITCON 闖關活動</title>
     <link rel="icon" href="./images/hr.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/game.css">
     <meta charset="utf-8">
